--- a/myapp/templates/myapp/about.html
+++ b/myapp/templates/myapp/about.html
@@ -92,7 +92,7 @@
                                 <p><strong>If i have a problem, where do i report?</strong></p>
                                 <div class="contacts">                               
                                     <button class="contactsItem"><img src="{% static 'myapp/assets/phone.png' %}" height="20px" width="20px" alt="">&nbsp;+254745657493</button>
-                                    <button class="contactsItem"><img src="{% static 'myapp/assets/email.webp' %}" height="20px" width="20px" alt="">&nbsp;violet@gmail.com</button>
+                                    <button class="contactsItem"><img src="{% static 'myapp/assets/email.webp' %}" height="20px" width="20px" alt="">&nbsp;kemuntoviolet7@gmail.com</button>
                 
                                 </div>
 
@@ -115,7 +115,7 @@
                 <p><i>For any help or queries contact us via:</i></p>
                 <div class="contacts">                               
                     <button class="contactsItem"><img src="{% static 'myapp/assets/phone.png' %}" height="20px" width="20px" alt="">&nbsp;+254745657493</button>
-                    <button class="contactsItem"><img src="{% static 'myapp/assets/email.webp' %}" height="20px" width="20px" alt="">&nbsp;violet@gmail.com</button>
+                    <button class="contactsItem"><img src="{% static 'myapp/assets/email.webp' %}" height="20px" width="20px" alt="">&nbsp;kemuntoviolet7@gmail.com</button>
 
                 </div>
                 <hr style="width:100%;border:1px solid #e8e8e8;">
