--- a/myapp/templates/myapp/create_task.html
+++ b/myapp/templates/myapp/create_task.html
@@ -16,7 +16,7 @@
                
                 <div class="headerTitleContainer">
                     <img src="{% static 'myapp/assets/vtasklogoF.png' %}" height="140px" width="150px" alt="">&nbsp;
-                    <h1>:Adding new Tasks</h1>
+                    <h1>:New Tasks</h1>
                 </div>
 
                 <form action="" method="POST" id="searchForm">                 
@@ -36,14 +36,24 @@
         </header>
         <main>
             <div class="contentWrapper">
-                {% if messages %}
-                <ul>
-                    {% for message in messages %}
-                        <li>{{ message }}</li>
-                    {% endfor %}
-                </ul>
-                {% endif %}
-              
+                <form action="{% url 'create_task' %}" method="POST" class="functionalityForms">
+                    {% csrf_token %}
+                
+                    <label for="taskName">Enter Task Name:</label>
+                    <input type="text" name="taskName" id="taskName" placeholder="Enter task name ..." required>
+                
+                    <label for="taskDescription">Enter Task Description (what you want to achieve):</label>
+                    <textarea name="taskDescription" id="taskDescription" cols="50" rows="10" placeholder="Enter task details..." required></textarea>
+                
+                    <label for="taskCategory">Task Category:</label><br>
+                    <input type="text" name="taskCategory" id="taskCategoryName" placeholder="Enter category name ..." required>
+                
+                    <label for="taskScheduledFor">Scheduled Date:</label>
+                    <input type="date" name="taskScheduledFor" id="taskScheduledFor" required>
+                
+                    <input type="submit" value="Add Task">
+                </form>
+                
 
                 
             </div>
@@ -59,7 +69,7 @@
                 <p><i>For any help or queries contact us via:</i></p>
                 <div class="contacts">                               
                     <button class="contactsItem"><img src="{% static 'myapp/assets/phone.png' %}" height="20px" width="20px" alt="">&nbsp;+254745657493</button>
-                    <button class="contactsItem"><img src="{% static 'myapp/assets/email.webp' %}" height="20px" width="20px" alt="">&nbsp;violet@gmail.com</button>
+                    <button class="contactsItem"><img src="{% static 'myapp/assets/email.webp' %}" height="20px" width="20px" alt="">&nbsp;kemuntoviolet7@gmail.com</button>
 
                 </div>
                 <hr style="width:100%;border:1px solid #e8e8e8;">
