--- a/myapp/templates/myapp/todaystasks.html
+++ b/myapp/templates/myapp/todaystasks.html
@@ -36,27 +36,24 @@
         </header>
         <main>
             <div class="contentWrapper">
-                <h3>Your Tasks scheduled for today are</h3>
-                <h1>
-                    Tasks for {{ request.user.username }} on:&nbsp; 
-                    {% if tasks and tasks.0.taskCreationDate %}
-                        {{ tasks.0.taskCreationDate }}
-                    {% else %}
-                        Today
-                    {% endif %}
-                </h1>
+                <h1>Tasks Scheduled for Today: {{ today_date }}</h1>
 
-                {% if tasks %}
+                {% if today_tasks %}
                     <ul>
-                        {% for task in tasks %}
+                        {% for task in today_tasks %}
                             <li>
-                                <strong>{{ task.taskName }}</strong>: {{ task.taskDescription }}
+                                <strong>Task Name:</strong> {{ task.taskName }}<br>
+                                <strong>Description:</strong> {{ task.taskDescription }}<br>
+                                <strong>Category:</strong> {{ task.taskCategory }}<br>
+                                <strong>Created On:</strong> {{ task.taskCreationDate }}<br>
                             </li>
                         {% endfor %}
                     </ul>
                 {% else %}
-                    <p>No tasks scheduled for today!</p>
+                    <p>No tasks scheduled for today.</p>
                 {% endif %}
+            
+                <a href="{% url 'home' %}">Back to Home</a>
               
 
                 
@@ -73,7 +70,7 @@
                 <p><i>For any help or queries contact us via:</i></p>
                 <div class="contacts">                               
                     <button class="contactsItem"><img src="{% static 'myapp/assets/phone.png' %}" height="20px" width="20px" alt="">&nbsp;+254745657493</button>
-                    <button class="contactsItem"><img src="{% static 'myapp/assets/email.webp' %}" height="20px" width="20px" alt="">&nbsp;violet@gmail.com</button>
+                    <button class="contactsItem"><img src="{% static 'myapp/assets/email.webp' %}" height="20px" width="20px" alt="">&nbsp;kemuntoviolet7@gmail.com</button>
 
                 </div>
                 <hr style="width:100%;border:1px solid #e8e8e8;">
