--- a/myapp/static/myapp/styles.css
+++ b/myapp/static/myapp/styles.css
@@ -240,6 +240,10 @@ nav{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
 }
 .functionalityForms{
+    border: 1px solid #e8e8e8;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     height: 50vh;
